WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
134204
WKView does not unregister an observer when being dealloc'ed
https://bugs.webkit.org/show_bug.cgi?id=134204
Summary
WKView does not unregister an observer when being dealloc'ed
Roger Fong
Reported
2014-06-23 12:00:00 PDT
Unregister observer for NSApplicationWillTerminateNotification when dealloc'ing WKView.
Attachments
patch
(1.27 KB, patch)
2014-06-23 12:16 PDT
,
Roger Fong
thorton
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Roger Fong
Comment 1
2014-06-23 12:16:46 PDT
Created
attachment 233623
[details]
patch
Roger Fong
Comment 2
2014-06-23 12:19:05 PDT
<
rdar://problem/17415612
>
Roger Fong
Comment 3
2014-06-23 12:36:53 PDT
http://trac.webkit.org/changeset/170311
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug