Unregister notification observer registered in r170156. https://bugs.webkit.org/show_bug.cgi?id=134204.

Reviewed by Tim Horton.

* UIProcess/API/mac/WKView.mm:
(-[WKView dealloc]):


Canonical link: https://commits.webkit.org/152170@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@170311 268f45cc-cd09-0410-ab3c-d52691b4dbfc